<?xml version="1.0"?>
<package>
  <name>sr_ronex_examples</name>
  <version>0.9.13</version>
  <description>Package containing examples for the RoNeX boards.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>
  <author>Yi Li</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sr_ronex_msgs</build_depend>
  <build_depend>sr_ronex_hardware_interface</build_depend>
  <build_depend>sr_ronex_utilities</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>ros_ethercat_model</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sr_ronex_msgs</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>sr_ronex_utilities</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>xacro</run_depend>
  
  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
  
</package>
