<!-- Copyright (c) 2013, Shadow Robot Company, All rights reserved.     -->
<!--                                                                    -->
<!-- This library is free software; you can redistribute it and/or      -->
<!-- modify it under the terms of the GNU Lesser General Public         -->
<!-- License as published by the Free Software Foundation; either       -->
<!-- version 3.0 of the License, or (at your option) any later version. -->
<!--                                                                    -->
<!-- This library is distributed in the hope that it will be useful,    -->
<!-- but WITHOUT ANY WARRANTY; without even the implied warranty of     -->
<!-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU   -->
<!-- Lesser General Public License for more details.                    -->
<!--                                                                    -->
<!-- You should have received a copy of the GNU Lesser General Public   -->
<!-- License along with this library.                                   -->

<package>
  <name>sr_ronex_external_protocol</name>
  <version>1.0.0</version>
  <description>Contains the protocol to communicate between the driver and the ronex hardware.</description>
  <maintainer email="software@shadowrobot.com">Ugo Cupcic</maintainer>

  <license>Proprietary</license>

  <url type="website">http://ros.org/wiki/sr_ronex_external_protocol</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>
