<package>
  <name>sr_ronex_hardware_interface</name>
  <version>0.9.12</version>
  <description>This package contains the definition of the CustomHW to be
    added to the ros_ethercat_model CustomHWMap for the
    RoNeX.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>ros_ethercat_hardware</build_depend>
  <build_depend>ros_ethercat_model</build_depend>
  <build_depend>sr_ronex_external_protocol</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>pr2_hardware_interface</test_depend> -->
  <!-- <test_depend>sr_ronex_external_protocol</test_depend> -->

</package>
