<!-- Copyright (c) 2013, Shadow Robot Company, All rights reserved.     -->
<!--                                                                    -->
<!-- This library is free software; you can redistribute it and/or      -->
<!-- modify it under the terms of the GNU Lesser General Public         -->
<!-- License as published by the Free Software Foundation; either       -->
<!-- version 3.0 of the License, or (at your option) any later version. -->
<!--                                                                    -->
<!-- This library is distributed in the hope that it will be useful,    -->
<!-- but WITHOUT ANY WARRANTY; without even the implied warranty of     -->
<!-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU   -->
<!-- Lesser General Public License for more details.                    -->
<!--                                                                    -->
<!-- You should have received a copy of the GNU Lesser General Public   -->
<!-- License along with this library.                                   -->

<package>
  <name>sr_ronex_launch</name>
  <version>1.0.0</version>
  <description>Contains the main launch files for the RoNeX system.</description>
  <maintainer email="software@shadowrobot.com">Toni Oliver</maintainer>

  <license>Proprietary</license>

  <url type="website">http://ros.org/wiki/sr_ronex_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_ethercat</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_ethercat</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_ethercat</test_depend> -->

</package>
