<package>
  <name>sr_ronex_launch</name>
  <version>1.0.0</version>
  <description>Contains the main launch files for the RoNeX system.</description>
  <maintainer email="software@shadowrobot.com">Toni Oliver</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://ros.org/wiki/sr_ronex_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_ethercat</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_ethercat</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_ethercat</test_depend> -->

</package>
