<package>
  <name>sr_ronex_test</name>
  <version>1.0.0</version>
  <description>contains software tests that require RoNeX hardware.</description>
  <maintainer email="software@shadowrobot.com">Manos Nikolaidis</maintainer>

  <license>Proprietary</license>

  <url type="website">http://ros.org/wiki/sr_ronex_test</url>

  <author>Manos Nikolaidis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>pr2_ethercat</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>pr2_ethercat</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>rosunit</test_depend>
</package>
