<package>
  <name>sr_ronex_test</name>
  <version>0.9.15</version>
  <description>contains software tests that require RoNeX hardware.</description>
  <maintainer email="software@shadowrobot.com">Manos Nikolaidis</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Manos Nikolaidis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>ros_ethercat</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>rosunit</test_depend>
</package>
