<package>
  <name>sr_ronex_transmissions</name>
  <version>0.9.13</version>
  <description>Contains the transmissions that can be used with the RoNeX driver. Using those transmissions makes it possible for the user to remap from the RoNeX to a joint based robot.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sr_ronex_hardware_interface</build_depend>
  <build_depend>ros_ethercat_model</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>ros_ethercat_model</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sr_ronex_hardware_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_model</test_depend> -->
  <test_depend>gtest</test_depend>

<export>
    <ros_ethercat_model plugin="${prefix}/transmission_plugin.xml"/>
</export>

</package>
