<?xml version="1.0"?>
<package>
  <name>sr_ronex_utilities</name>
  <version>0.9.15</version>
  <description>Package containing a header library with useful inline functions for working with the RoNeX.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>roscpp</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>

</package>
