<package>
  <name>sr_ronex</name>
  <version>1.0.0</version>
  <description>This stack contains the different packages related to the RoNeX (Robot Nervous System).</description>
  <maintainer email="software@shadowrobot.com">Toni Oliver</maintainer>

  <license>GPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_ronex</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_ronex_launch</run_depend>
  <run_depend>sr_ronex_mechanism_model</run_depend>
  <run_depend>sr_common_msgs</run_depend>
  <run_depend>sr_ronex_controllers</run_depend>
  <run_depend>sr_ronex_ethercat_drivers</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
